--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,15 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/db_example
-spring.datasource.username=springuser
-spring.datasource.password=ThePassword
+server.port=8080
+
+spring.datasource.url=jdbc:mysql://mysqldb:3306/storagedb
+spring.datasource.username=user
+spring.datasource.password=password
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/storage
+#spring.datasource.username=springuser
+#spring.datasource.password=ThePassword
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql: true
 
-
-
-#spring.cloud.gcp.sql.database-name=warehouse
-#spring.cloud.gcp.sql.instance-connection-name=ma-wad2022:europe-west6:kbe-awa2022
-
-# So app starts despite "table already exists" errors.
-#spring.sql.init.continue-on-error=true
-# Enforces database initialization
-#spring.sql.init.mode=always
-
-# Leave empty for root, uncomment and fill out if you specified a user
-#spring.datasource.username=developer
-
-# Uncomment if root password is specified
-#spring.datasource.password=developer
-
-#spring.cloud.gcp.project-id=kbe-awa2022
-#spring.cloud.gcp.credentials.location=file:/Users/Artur/Downloads/ma-wad2022-02afea4e7223.json
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
